[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu/StarsMenuBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://LevelObjects/SpaceShip.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/SquadaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/font_main_menu.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menu/MainMenu/Buttons.gd" type="Script" id=5]
[ext_resource path="res://Menu/MainMenu/Button1.gd" type="Script" id=6]
[ext_resource path="res://Menu/MainMenu/Button2.gd" type="Script" id=7]
[ext_resource path="res://Menu/MainMenu/Button3.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsMenuBackground" parent="." instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="."]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
margin_top = 0.950012
margin_right = -0.799866
focus_neighbour_top = NodePath("VBoxContainer/Button3")
focus_neighbour_bottom = NodePath("VBoxContainer/Button2")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceShipBody" parent="Control" instance=ExtResource( 2 )]
position = Vector2( 165.952, 41.0696 )
script = null

[node name="Explosion_sprite" parent="Control/SpaceShipBody" index="5"]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="ReferenceRect" parent="Control/VBoxContainer"]
margin_right = 204.0
margin_bottom = 77.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="Label" type="Label" parent="Control/VBoxContainer/Button1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
mouse_filter = 1
custom_fonts/font = ExtResource( 4 )
text = "start game"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="ReferenceRect" parent="Control/VBoxContainer"]
margin_top = 81.0
margin_right = 204.0
margin_bottom = 158.0
focus_neighbour_top = NodePath("../Button1")
focus_neighbour_bottom = NodePath("../Button3")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )
settings_page = NodePath("../../../Settings")
control_page = NodePath("../..")

[node name="Label" type="Label" parent="Control/VBoxContainer/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
mouse_filter = 1
custom_fonts/font = ExtResource( 4 )
text = "settings"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="ReferenceRect" parent="Control/VBoxContainer"]
margin_top = 162.0
margin_right = 204.0
margin_bottom = 239.0
focus_neighbour_top = NodePath("../Button2")
focus_neighbour_bottom = NodePath("../Button1")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )
credits_page = NodePath("../../../Credits")
control_page = NodePath("../..")

[node name="Label" type="Label" parent="Control/VBoxContainer/Button3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 0.513336
mouse_filter = 1
custom_fonts/font = ExtResource( 4 )
text = "credits"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_as_outline = 10
text = "Space Drift"
align = 1
valign = 1

[node name="Settings" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Credits" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Control/VBoxContainer/Button1" to="Control/VBoxContainer" method="_on_Button1_mouse_entered"]
[connection signal="mouse_entered" from="Control/VBoxContainer/Button2" to="Control/VBoxContainer" method="_on_Button2_mouse_entered"]
[connection signal="mouse_entered" from="Control/VBoxContainer/Button3" to="Control/VBoxContainer" method="_on_Button3_mouse_entered"]

[editable path="Control/SpaceShipBody"]
